# diet

./: .gitignore  README.md  pyproject.toml
diet/: main.py
diet/command/: __init__.py  diet.py  food.py  plan.py  shop.py  user.py
diet/component/: calculation.py  combination.py  diet_plan_printer.py  pprint.py
diet/crud/: __init__.py  models.py  repo.py
diet/logic/: diet.py
diet/utils/: __init__.py  calculation.py  combination.py  pprint.py  prompt.py  strutils.py
