[tool.poetry]
name = "diet"
version = "0.1.0"
description = ""
authors = ["zdate <zdatezz0528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^2.7.2"
thefuzz = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diet = "diet.main:cli"
